@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-05-30T00:59:39Z",
-  "count_outdated" : 1661,
-  "uniques_outdated" : 914,
-  "count" : 1683,
-  "uniques" : 929,
+  "timestamp" : "2024-05-31T01:00:13Z",
+  "count_outdated" : 1663,
+  "uniques_outdated" : 915,
+  "count" : 1684,
+  "uniques" : 930,
   "clones" : [
-    {
-      "timestamp": "2024-05-16T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-05-17T00:00:00Z",
       "count": 2,
@@ -124,6 +115,15 @@
     },
     {
       "timestamp": "2024-05-29T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-05-30T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
