@@ -1,12 +1,7 @@
 {
-  "count": 22,
+  "count": 21,
   "uniques": 4,
   "clones": [
-    {
-      "timestamp": "2024-05-16T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-05-17T00:00:00Z",
       "count": 2,
@@ -69,6 +64,11 @@
     },
     {
       "timestamp": "2024-05-29T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-05-30T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
